[package]
name = "child"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-certified-assets = "0.2.4"
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"