[package]
name = "parent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-ledger-types = "0.1.2"
candid = "0.7.4"
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
serde = "1.0.126"
serde_bytes = "0.11"
