[package]
name = "child"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13.1"
ic-certified-assets = { path = "../../_meta/assets" }
candid = "0.10.5"
candid_parser = "0.1.4"
serde_bytes = "0.11.9"
serde_json = "1.0.116"
serde = "1.0.188"
hex = "0.4.3"
libsecp256k1 = { version = "0.6.0", default-features = false, features = ["lazy-static-context"] }
easy-hasher = "2.2.1"
ed25519-dalek = "2.1.1"
bs58 = "0.5.0"
sha2 = "0.10.7"
num-traits = "0.2.14"
icrc-ledger-types = "0.1.1"
ic-cdk-timers = "0.7.0"
slotmap = "1.0.7"
addr = "0.15.6"