[package]
name = "parent"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.8.1"
ic-cdk-macros = "0.6.10"
ic-certified-assets = { path = "../../_meta/assets" }
ic-cdk-main = { package = "ic-cdk", version = "0.6.8", features = ["timers"] }
include_macros = { path = "../../_meta/macros" }
serde = "1.0.126"
serde_bytes = "0.11"
serde_json = "1.0.82"
candid = "0.8.4"
sha2 = "0.10.6"
crc32fast = "1.3.2"
