[package]
name = "parent"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
ic-certified-assets = { path = "../../_meta/assets" }
include_macros = { path = "../../_meta/macros" }
serde = "1.0.188"
serde_bytes = "0.11.9"
serde_json = "1.0.97"
candid = "0.9.11"
sha2 = "0.10.7"
crc32fast = "1.3.2"
num-traits = "0.2.14"
